--- a/code.css
+++ b/code.css
@@ -21,6 +21,7 @@ nav {
     background-color: rgb(40, 40, 40);
     padding: 10px;
     display: flex;
+    justify-content: space-between;
     height: 6vh;
     border-radius: 5px;
     align-items: center;
@@ -39,10 +40,14 @@ nav {
     height: 100%;
 }
 
+/* section-1 */
+
 .section-1 {
     margin: 0 20px 20px 20px;
     background-color: rgb(40, 40, 40);
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .upper {
@@ -63,9 +68,11 @@ nav {
 .middle {
     margin-top: 10px;
     padding: 10px;
+    height: 100%;
+    overflow: auto;
 }
 
-.middle .header span{
+.middle .header span {
     margin-right: 1.5rem;
     color: white;
 }
@@ -100,7 +107,7 @@ nav {
     justify-content: center;
     flex-direction: column;
     margin: 20px;
-    height: 40%;
+    height: 60%;
     width: 80%;
 }
 
@@ -109,11 +116,30 @@ nav {
 }
 
 iframe {
+    border-radius: 5px;;
+}
+
+.section-1 .lower {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
+    gap: 5rem;
+    border-top: 1px solid white;
+}
+
+.section-1 .lower span {
+    display: flex;
+    gap: 0.5rem;
+    background-color: rgb(26, 26, 26);
+    padding: 5px 10px;
     border-radius: 5px;
+    cursor: pointer;
+    color: white;
 }
 
 /* section-2 */
-.section-2{
+.section-2 {
     margin: 0 20px 20px 20px;
     background-color: rgb(40, 40, 40);
     border-radius: 10px;
@@ -122,7 +148,7 @@ iframe {
     flex-direction: column;
 }
 
-#editor { 
+#editor {
     width: 100%;
     height: 100%;
     font-size: 1rem;
@@ -157,18 +183,21 @@ iframe {
 
 .run-btn {
     background-color: rgb(26, 26, 26);
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .submit-btn {
     background-color: green;
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .console {
-    clear: left;
+    background-color: rgb(26, 26, 26);
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
 }
