--- a/code.css
+++ b/code.css
@@ -8,6 +8,12 @@ body {
     background-color: rgb(26, 26, 26);
     height: 100vh;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+a {
+    text-decoration: none;
 }
 
 .container {
@@ -33,10 +39,24 @@ nav {
     height: max-content;
 }
 
+.mob-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.mob-section div {}
+
+.mob-section div a {
+    color: white;
+}
+
 .content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    flex-grow: 1;
+    grid-template-rows: 90vh;
+    /* flex: 1; */
     height: 100%;
 }
 
@@ -45,9 +65,12 @@ nav {
 .section-1 {
     margin: 0 20px 20px 20px;
     background-color: rgb(40, 40, 40);
+    grid-column-start: 1;
+    /* grid-row-start: 1; */
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .upper {
@@ -56,7 +79,6 @@ nav {
 }
 
 .upper a {
-    text-decoration: none;
     color: #eff1f6bf;
     margin-right: 15px;
 }
@@ -66,10 +88,30 @@ nav {
 }
 
 .middle {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
     margin-top: 10px;
     padding: 10px;
-    height: 100%;
-    overflow: auto;
+    overflow-y: auto;
+}
+
+.middle::-webkit-scrollbar {
+    background-color: transparent;
+    height: 7px;
+    width: 7px;
+}
+
+.middle::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: transparent;
+    border-radius: 10px;
+}
+
+.middle::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 5px;
 }
 
 .middle .header span {
@@ -116,7 +158,8 @@ nav {
 }
 
 iframe {
-    border-radius: 5px;;
+    border-radius: 5px;
+    ;
 }
 
 .section-1 .lower {
@@ -126,6 +169,15 @@ iframe {
     padding: 15px 20px;
     gap: 5rem;
     border-top: 1px solid white;
+}
+
+.problem-list span{
+    background-color: green !important;
+}
+
+.move-btns {
+    display: flex;
+    gap: 1.5rem;
 }
 
 .section-1 .lower span {
@@ -152,6 +204,24 @@ iframe {
     width: 100%;
     height: 100%;
     font-size: 1rem;
+}
+
+.ace_scrollbar::-webkit-scrollbar {
+    background-color: transparent;
+    height: 7px;
+    width: 7px;
+}
+
+.ace_scrollbar::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: transparent;
+    border-radius: 10px;
+}
+
+.ace_scrollbar::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 5px;
 }
 
 .section-2 .header {
