--- a/views/code.ejs
+++ b/views/code.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <script src="https://kit.fontawesome.com/040eb06c51.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="code.css">
+    <link rel="stylesheet" href="/styles/code.css">
 </head>
 
 <body>
@@ -57,19 +57,9 @@
                     <div class="example">
                         <div id="ex-editor"></div>
                     </div>
-                    <!-- <pre class="code-preview">
-                        <code>
-                          &lt;div class=&quot;calculator-card&quot;&gt;
-                            &lt;div class=&quot;input-div&quot;&gt;
-                            &lt;/div&gt;
-                            &lt;div class=&quot;buttons&quot;&gt;
-                            &lt;/div&gt;
-                          &lt;/div&gt;
-                        </code>
-                      </pre> -->
                     <div class="preview">
                         <p>Preview:</p>
-                        <iframe src="ex.html" frameborder="0" height="300"></iframe>
+                        <iframe src="../ex.html" frameborder="0" height="300"></iframe>
                     </div>
                 </div>
                 <div class="lower">
@@ -108,7 +98,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.23.0/ext-language_tools.min.js"
         integrity="sha512-Thg/+2CD9a62wd9RhUes0dWKbg4Pq90sCXWr5JpKsIiqcW0Km46AbE662jiUI+z441pTYSM8D+/9LOuEscAuIQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="code.js"></script>
+    <script src="/scripts/code.js"></script>
 </body>
 
 </html>
