--- a/views/code.ejs
+++ b/views/code.ejs
@@ -53,14 +53,13 @@
                     <div class="question">
                         <span class="ques-no">1.</span>
                         <span class="ques-heading">
-                            <%= data[0].project[0].question[0].heading %>
+                            <%= data[0].project[0].question[2].heading %>
                         </span>
-                        <div class="ques-info"><%= data[0].project[0].question[0].info %>
+                        <div class="ques-info"><%= data[0].project[0].question[2].info %>
                         </div>
                     </div>
                     <div class="example">
                         <div id="ex-editor">
-                            <%= data[0].project[0].question[0].example %>
                         </div>
                     </div>
                     <div class="preview">
@@ -83,6 +82,7 @@
                     <span>Javascript</span>
                     <span>
                         <span class="reload"><i class="fa-solid fa-rotate-right" style="color: #ffffff;"></i></span>
+                        <span class="copy"><i class="fa-regular fa-copy" style="color: #ffffff;"></i></span>
                         <span class="settings"><i class="fa-solid fa-gear" style="color: #ffffff;"></i></span>
                     </span>
                 </div>
