--- a/styles/code.css
+++ b/styles/code.css
@@ -77,7 +77,7 @@ nav {
     overflow: hidden;
 }
 
-.upper {
+.section-1 .upper {
     height: 2.25rem;
     display: flex;
     /* justify-content: space-evenly; */
@@ -87,17 +87,17 @@ nav {
     border-bottom: 1px solid #ccc;
 }
 
-.upper a {
+.section-1 .upper a {
     color: #eff1f6bf;
     /* margin-right: 1rem; */
     font-size: 12px;
 }
 
-.upper a:hover {
+.section-1 .upper a:hover {
     color: white;
 }
 
-.middle {
+.section-1 .middle {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -106,25 +106,25 @@ nav {
     overflow-y: auto;
 }
 
-.middle::-webkit-scrollbar {
+.section-1 .middle::-webkit-scrollbar {
     background-color: transparent;
     height: 7px;
     width: 7px;
 }
 
-.middle::-webkit-scrollbar-track {
+.section-1 .middle::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: transparent;
     border-radius: 10px;
 }
 
-.middle::-webkit-scrollbar-thumb {
+.section-1 .middle::-webkit-scrollbar-thumb {
     background-color: darkgrey;
     outline: 1px solid slategrey;
     border-radius: 5px;
 }
 
-.middle .header span {
+.section-1 .middle .header span {
     margin-right: 1.5rem;
     color: white;
     font-size: 12px;
@@ -163,7 +163,7 @@ nav {
     padding: 10px;
     font-family: monospace;
     white-space: pre-wrap;
-  } */  
+  } */
 
 #ex-editor {
     display: absolute;
@@ -202,7 +202,7 @@ iframe {
     background-color: #000;
 }
 
-.problem-list span{
+.problem-list span {
     background-color: green !important;
 }
 
@@ -229,6 +229,7 @@ iframe {
 }
 
 /* section-2 */
+
 .section-2 {
     /* margin: 0 20px 20px 20px; */
     background-color: rgb(40, 40, 40);
@@ -262,13 +263,13 @@ iframe {
     border-radius: 5px;
 }
 
-.section-2 .header {
-    height: 2.55rem;
+.section-2>.header {
+    /* height: 2.55rem; */
     font-size: 14px;
     /* padding: 10px 20px; */
     color: white;
     display: flex;
-    padding: 0 1rem;
+    padding: 0.8rem 1rem;
     align-items: center;
     justify-content: space-between;
     /* border-bottom: 1px solid #ccc; */
@@ -279,12 +280,51 @@ iframe {
     gap: 1rem;
 }
 
+.hidden {
+    display: none;
+}
+
+.console-area {
+    height: 60rem;
+    background-color: rgb(26, 26, 26);
+    overflow: auto;
+    animation: console 500ms ease forwards;
+}
+
+.console-area>.middle {
+    /* height: 100%; */
+    color: white;
+    font-size: 1rem;
+    padding: 1rem;
+}
+
+.console-area .header {
+    background-color: rgb(40, 40, 40);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.8rem 1rem;
+    font-size: 1rem;
+    color: white;
+}
+
+@keyframes console {
+    0% {
+        height: 0;
+    }
+
+    100% {
+        height: 100%;
+    }
+}
+
 .section-2 .lower {
     display: flex;
     justify-content: space-between;
-    height: 3.25rem;
+    /* height: 3.25rem; */
     align-items: center;
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     /* border-top: 1px solid #ccc; */
 }
 
@@ -303,11 +343,11 @@ iframe {
     gap: 1rem;
 }
 
-.run-btn, .console {
+.run-btn,
+.console {
     background-color: rgb(26, 26, 26);
 }
 
 .submit-btn {
     background-color: green;
-   
 }
