--- a/views/code.ejs
+++ b/views/code.ejs
@@ -55,7 +55,8 @@
                         <span class="ques-heading">
                             <%= data[0].project[0].question[2].heading %>
                         </span>
-                        <div class="ques-info"><%= data[0].project[0].question[2].info %>
+                        <div class="ques-info">
+                            <%= data[0].project[0].question[2].info %>
                         </div>
                     </div>
                     <div class="example">
@@ -87,11 +88,21 @@
                     </span>
                 </div>
                 <div id="editor"></div>
+                <div class="console-area hidden">
+                    <div class="header">
+                        <span>Result</span>
+                        <span>Feedback(beta)</span>
+                    </div>
+                    <div class="middle">
+                        
+                    </div>
+                </div>
                 <div class="lower">
-                    <div class="console">Console</div>
+                    <div class="console">Console <i class="fa-solid fa-terminal" style="color: #ffffff;"></i></div>
                     <div class="right">
-                        <div class="run-btn">Run</div>
-                        <div class="submit-btn">Submit</div>
+                        <div class="run-btn">Run <i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                        <div class="submit-btn">Submit <i class="fa-solid fa-right-to-bracket"
+                                style="color: #ffffff;"></i></div>
                     </div>
                 </div>
             </div>
