--- a/views/code.ejs
+++ b/views/code.ejs
@@ -91,10 +91,14 @@
                 <div class="console-area hidden">
                     <div class="header">
                         <span>Result</span>
-                        <span>Feedback(beta)</span>
+                        <span>Feedback (<span>beta</span>)</span>
                     </div>
                     <div class="middle">
-                        
+                        <div class="result">
+                            <span><i class="fa-solid fa-maximize"></i></span>
+                            <iframe src="/ex" frameborder="0"></iframe>
+                        </div>
+                        <div class="feedback"></div>
                     </div>
                 </div>
                 <div class="lower">
