--- a/styles/code.css
+++ b/styles/code.css
@@ -241,7 +241,7 @@ iframe {
 
 #editor {
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
     font-size: 1rem;
 }
 
@@ -275,7 +275,7 @@ iframe {
     /* border-bottom: 1px solid #ccc; */
 }
 
-.section-2 .header span {
+.section-2>.header span {
     display: flex;
     gap: 1rem;
 }
@@ -284,10 +284,15 @@ iframe {
     display: none;
 }
 
+.visible {
+    display: flex;
+}
+
 .console-area {
-    height: 60rem;
+    height: 50vh;
     background-color: rgb(26, 26, 26);
     overflow: auto;
+    flex-direction: column;
     animation: console 500ms ease forwards;
 }
 
@@ -296,6 +301,7 @@ iframe {
     color: white;
     font-size: 1rem;
     padding: 1rem;
+    flex-grow: 1;
 }
 
 .console-area .header {
@@ -309,14 +315,39 @@ iframe {
     color: white;
 }
 
+.console-area .header span:nth-child(2) span  {
+    color: green;
+}
+
 @keyframes console {
     0% {
         height: 0;
     }
 
     100% {
-        height: 100%;
+        height: 50vh;
     }
+}
+
+.console-area .result{
+    position: relative;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.console-area .result>span {
+    color: rgb(41, 62, 97);
+    font-size: 2rem;
+    position: absolute;
+    right: 6%;
+    top: 5px;
+    cursor: pointer;
+}
+
+.console-area .result iframe {
+    height: 100%;
+    width: 90%;
 }
 
 .section-2 .lower {
