--- a/views/code.ejs
+++ b/views/code.ejs
@@ -95,8 +95,8 @@
                     </div>
                     <div class="middle">
                         <div class="result">
-                            <span><i class="fa-solid fa-maximize"></i></span>
-                            <iframe src="/ex" frameborder="0"></iframe>
+                            <span class="fullscreen-btn"><i class="fa-solid fa-maximize"></i></span>
+                            <iframe src="/calculator" frameborder="0"></iframe>
                         </div>
                         <div class="feedback"></div>
                     </div>
