--- a/views/code.ejs
+++ b/views/code.ejs
@@ -95,7 +95,7 @@
                     </div>
                     <div class="middle">
                         <div class="result">
-                            <span class="fullscreen-btn"><i class="fa-solid fa-maximize"></i></span>
+                            <span class="fullscreen-btn smallscreenBtn"><i class="fa-solid fa-maximize"></i></span>
                             <iframe src="/calculator" frameborder="0"></iframe>
                         </div>
                         <div class="feedback"></div>
