--- a/views/code.ejs
+++ b/views/code.ejs
@@ -98,6 +98,7 @@
                             <iframe src="/calculator" frameborder="0"></iframe>
                         </div>
                         <div class="feedback hidden">
+                            Let's Goooo! <br> Run your code for feedback
                         </div>
                     </div>
                 </div>
