--- a/views/code.ejs
+++ b/views/code.ejs
@@ -120,7 +120,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.23.0/ext-language_tools.min.js"
         integrity="sha512-Thg/+2CD9a62wd9RhUes0dWKbg4Pq90sCXWr5JpKsIiqcW0Km46AbE662jiUI+z441pTYSM8D+/9LOuEscAuIQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/scripts/code.js"></script>
+    <script src="/scripts/code.js" type="module"></script>
 </body>
 
 </html>
