--- a/styles/code.css
+++ b/styles/code.css
@@ -173,6 +173,11 @@ nav {
     font-size: 12px;
     border-radius: 5px;
 }
+/* 
+#ex-editor ::selection{
+  background-color: transparent !important;
+  color: inherit !important;
+} */
 
 .preview {
     display: flex;
@@ -244,6 +249,12 @@ iframe {
     flex-grow: 1;
     font-size: 1rem;
 }
+
+/* #editor ::selection,
+#editor .ace_selection {
+  background-color: transparent !important;
+  color: inherit !important;
+} */
 
 .ace_scrollbar::-webkit-scrollbar {
     background-color: transparent;
