--- a/views/code.ejs
+++ b/views/code.ejs
@@ -8,6 +8,10 @@
 
     <script src="https://kit.fontawesome.com/040eb06c51.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/code.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -50,12 +54,30 @@
                         <span class="hint"><i class="fa-regular fa-lightbulb" style="color: #ffffff;"></i></span>
                     </div>
                     <div class="question">
-                        <span class="ques-no">1.</span>
+                        <span class="ques-no">
+                            <%= data[0].project[0].question[0].quesNumber %>.
+                        </span>
                         <span class="ques-heading">
                             <%= data[0].project[0].question[0].heading %>
                         </span>
                         <div class="ques-info">
-                            <%= data[0].project[0].question[0].info %>
+                            In this task, your goal is to create a user interface for a simple calculator by utilizing
+                            HTML. The calculator will be presented as a card, structured with a main <code>div</code>
+                            element having the class name "calculator-card". Within this card, you will need to include
+                            two additional <code>div</code> elements to organize the content.\n\n
+                            <ul>
+                                <li> The first inner <code>div</code>, with the class name "display" and insert "0" as
+                                    default content in this div, this will serve as a container for the calculator's
+                                    input field. This field will be used to display the numbers and results of
+                                    calculations to the user.\n\n
+                                </li>
+                                <li> The second inner <code>div</code>, with the class name "buttons", will act as a
+                                    container for the calculator's buttons. These buttons will enable users to perform
+                                    basic mathematical operations such as addition, subtraction, multiplication, and
+                                    division.
+                                </li>
+
+                            </ul>
                         </div>
                     </div>
                     <div class="example">
@@ -72,8 +94,10 @@
                         <span>Problem List <i class="fa-solid fa-list" style="color: #ffffff;"></i></span>
                     </div>
                     <div class="move-btns">
-                        <span><i class="fa-solid fa-backward" style="color: #ffffff;"></i> PREV</span>
-                        <span>NEXT <i class="fa-solid fa-forward" style="color: #ffffff;"></i></span>
+                        <span onclick="handlePrevBtn()"><i class="fa-solid fa-backward" style="color: #ffffff;"></i>
+                            PREV</span>
+                        <span onclick="handleNextBtn()">NEXT <i class="fa-solid fa-forward"
+                                style="color: #ffffff;"></i></span>
                     </div>
                 </div>
             </div>
