--- a/views/code.ejs
+++ b/views/code.ejs
@@ -61,23 +61,7 @@
                             <%= data[0].project[0].question[0].heading %>
                         </span>
                         <div class="ques-info">
-                            In this task, your goal is to create a user interface for a simple calculator by utilizing
-                            HTML. The calculator will be presented as a card, structured with a main <code>div</code>
-                            element having the class name "calculator-card". Within this card, you will need to include
-                            two additional <code>div</code> elements to organize the content.\n\n
-                            <ul>
-                                <li> The first inner <code>div</code>, with the class name "display" and insert "0" as
-                                    default content in this div, this will serve as a container for the calculator's
-                                    input field. This field will be used to display the numbers and results of
-                                    calculations to the user.\n\n
-                                </li>
-                                <li> The second inner <code>div</code>, with the class name "buttons", will act as a
-                                    container for the calculator's buttons. These buttons will enable users to perform
-                                    basic mathematical operations such as addition, subtraction, multiplication, and
-                                    division.
-                                </li>
-
-                            </ul>
+                            <%- data[0].project[0].question[0].info %>
                         </div>
                     </div>
                     <div class="example">
@@ -91,7 +75,7 @@
                 </div>
                 <div class="lower">
                     <div class="problem-list">
-                        <span>Problem List <i class="fa-solid fa-list" style="color: #ffffff;"></i></span>
+                        <span>Problem List</span>
                     </div>
                     <div class="move-btns">
                         <span onclick="handlePrevBtn()"><i class="fa-solid fa-backward" style="color: #ffffff;"></i>
