--- a/views/code.ejs
+++ b/views/code.ejs
@@ -89,9 +89,9 @@
             <div class="section-2">
                 <div class="header">
                     <span class="editor-btns">
-                        <span class="html">Html</span>
-                        <span class="css">Css</span>
-                        <span class="js">Javascript</span>
+                        <span class="html">HTML</span>
+                        <span class="css">CSS</span>
+                        <span class="js">JAVASCRIPT</span>
                     </span>
                     <span>
                         <span class="reload"><i class="fa-solid fa-rotate-right" style="color: #ffffff;"></i></span>
