--- a/views/ques.ejs
+++ b/views/ques.ejs
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="brand">
-            DEV learner
+            Galaxy
         </div>
         <div class="mob-section">
             <div class="project-list">
