--- a/styles/ex.css
+++ b/styles/ex.css
@@ -5,70 +5,47 @@
 }
 
 body {
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0.7);
     height: 100vh;
-    background-color: #b8c6db;
-    font-family: 'Poppins', sans-serif;
-    transform: scale(0.5) translateY(-50%);
+    width: 100vw;
     overflow: hidden;
 }
 
-h1 {
-    text-align: center;
-    margin: 1rem;
-    color: blue;
-}
-
-.card {
-    width: 600px;
-    background-color: white;
-    border-radius: 10px;
-    max-width: 100%;
-    overflow: hidden;
-    margin: auto;
-}
-
-.header {
-    padding: 3rem;
-}
-
-h2 {
+.calculator-card {
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
-    text-align: center;
+    background-color: #222;
+    border-radius: 10px;
 }
 
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    font-size: 1.3rem;
-    margin: 1rem 0;
-}
-
-ul li label {
-    cursor: pointer;
-    margin-left: 5px;
-}
-
-ul li input {
-    cursor: pointer;
-}
-
-button {
-    background-color: #8e44ad;
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    color: white;
+.input-text {
     font-size: 1.2rem;
-    padding: 1.3rem;
+    padding: 10px 20px;
+    text-align: end;
+    color: white;
 }
 
-button:hover {
-    background-color: #732d91;
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+    margin-top: 20px;
+    color: white;
+    background-color: #333;
+    padding: 15px;
+    border-radius: 5px;
 }
 
-button:focus {
-    background-color: #732d91;
-    outline: none;
+.buttons div {
+    font-size: 1rem;
+    padding: 5px;
+    text-align: center;
+    background-color: #555;
+    border-radius: 5px;
+    cursor: pointer;
 }
