--- a/views/code.ejs
+++ b/views/code.ejs
@@ -18,7 +18,7 @@
     <div class="container">
         <nav>
             <div class="brand">
-                DEV learner
+                Galaxy
             </div>
             <div class="mob-section">
                 <div class="project-list">
