--- a/views/play.ejs
+++ b/views/play.ejs
@@ -67,6 +67,32 @@
                     </div>
                 </div>
             </div>
+            <div class="card">
+                <div class="preview">
+                    <iframe src="/ex-play" frameborder="0"></iframe>
+                </div>
+                <div class="info">
+                    <div class="heading">
+                        Water wave
+                    </div>
+                    <div class="name">
+                        Galaxy
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="preview">
+                    <iframe src="/ex-play" frameborder="0"></iframe>
+                </div>
+                <div class="info">
+                    <div class="heading">
+                        Water wave
+                    </div>
+                    <div class="name">
+                        Galaxy
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
