--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -50,7 +50,18 @@
             </div>
             <div id="editor"></div>
         </div>
-        <div class="render"></div>
+        <div class="preview">
+            <div class="header">
+                <div class="heading">
+                    <p>Preview</p>
+                </div>
+                <div class="preview-btns">
+                    <span class="reload-preview"><i class="fa-solid fa-rotate-right" style="color: #ffffff;"></i></span>
+                    <span class="new-window-btn"><i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></span>
+                </div>
+            </div>
+            <iframe src="" frameborder="0"></iframe>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.23.0/ace.js"
