--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -52,13 +52,13 @@
         </div>
         <div class="preview">
             <div class="header">
-                <div class="heading">
+                <span class="heading">
                     <p>Preview</p>
-                </div>
-                <div class="preview-btns">
+                </span>
+                <span class="preview-btns">
                     <span class="reload-preview"><i class="fa-solid fa-rotate-right" style="color: #ffffff;"></i></span>
                     <span class="new-window-btn"><i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></span>
-                </div>
+                </span>
             </div>
             <iframe src="" frameborder="0"></iframe>
         </div>
