--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -38,9 +38,9 @@
         <div class="text-editor">
             <div class="header">
                 <span class="editor-btns">
-                    <span class="html">HTML</span>
+                    <span class="html selected">HTML</span>
                     <span class="css">CSS</span>
-                    <span class="js">JAVASCRIPT</span>
+                    <span class="javascript">JAVASCRIPT</span>
                 </span>
                 <span>
                     <span class="reload"><i class="fa-solid fa-rotate-right" style="color: #ffffff;"></i></span>
